Resolve calculo das taxas de aprovação dos professores

--- a/Taxa de aprovação dos professores do IMD.ipynb
+++ b/Taxa de aprovação dos professores do IMD.ipynb
@@ -2707,16 +2707,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-48-b8659daef67e>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-b8659daef67e>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    matriculas_imd([)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_turma</th>\n",
+       "      <th>id_componente_curricular</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>id_docente_interno</th>\n",
+       "      <th>id_servidor</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>formacao</th>\n",
+       "      <th>aprovacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1239537</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>25889.0</td>\n",
+       "      <td>25889</td>\n",
+       "      <td>LOURENA KARIN DE MEDEIROS ROCHA</td>\n",
+       "      <td>MESTRADO</td>\n",
+       "      <td>43.3962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1239541</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>24798.0</td>\n",
+       "      <td>24798</td>\n",
+       "      <td>REGIVAN HUGO NUNES SANTIAGO</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>37.2414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57579587</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>24798.0</td>\n",
+       "      <td>24798</td>\n",
+       "      <td>REGIVAN HUGO NUNES SANTIAGO</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>36.2637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57576738</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>5757768.0</td>\n",
+       "      <td>5757768</td>\n",
+       "      <td>UMBERTO RIVIECCIO</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>25.3846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57579588</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>5757958.0</td>\n",
+       "      <td>5757958</td>\n",
+       "      <td>ATHANASIOS TSOUANAS</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>57597922</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>5757958.0</td>\n",
+       "      <td>5757958</td>\n",
+       "      <td>ATHANASIOS TSOUANAS</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>16.7832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>57597928</td>\n",
+       "      <td>55025</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>5757958.0</td>\n",
+       "      <td>5757958</td>\n",
+       "      <td>ATHANASIOS TSOUANAS</td>\n",
+       "      <td>DOUTORADO</td>\n",
+       "      <td>11.1111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_turma  id_componente_curricular   ano  id_docente_interno  id_servidor  \\\n",
+       "0   1239537                     55025  2015             25889.0        25889   \n",
+       "1   1239541                     55025  2015             24798.0        24798   \n",
+       "2  57579587                     55025  2016             24798.0        24798   \n",
+       "3  57576738                     55025  2016           5757768.0      5757768   \n",
+       "4  57579588                     55025  2016           5757958.0      5757958   \n",
+       "5  57597922                     55025  2017           5757958.0      5757958   \n",
+       "6  57597928                     55025  2017           5757958.0      5757958   \n",
+       "\n",
+       "                              nome   formacao aprovacao  \n",
+       "0  LOURENA KARIN DE MEDEIROS ROCHA   MESTRADO   43.3962  \n",
+       "1      REGIVAN HUGO NUNES SANTIAGO  DOUTORADO   37.2414  \n",
+       "2      REGIVAN HUGO NUNES SANTIAGO  DOUTORADO   36.2637  \n",
+       "3                UMBERTO RIVIECCIO  DOUTORADO   25.3846  \n",
+       "4              ATHANASIOS TSOUANAS  DOUTORADO        12  \n",
+       "5              ATHANASIOS TSOUANAS  DOUTORADO   16.7832  \n",
+       "6              ATHANASIOS TSOUANAS  DOUTORADO   11.1111  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2727,18 +2856,46 @@
     "turmas_fmc_ii = pd.merge(turmas_filtradas, docentes_imd, left_on='id_docente_interno', right_on='id_servidor', how='inner')\n",
     "\n",
     "turmas_fmc_ii['aprovacao'] = 'NaN'\n",
-    "turmas_fmc_ii['total_alunos'] = 'NaN'\n",
     "\n",
     "for index, row in teste.iterrows():\n",
-    "    turmas_fmc_ii.loc[index, 'aprovacao'] = matriculas_imd[np.logical_and(\n",
-    "        matriculas_imd['id_turma'] == row['id_turma'],\n",
-    "        matriculas_imd['descricao'].isin(['APROVADO', 'APROVADO POR NOTA'])\n",
-    "    )]['discente'].count() * 100)\n",
-    "    matriculas_imd[\n",
-    "            matriculas_imd['id_turma'] == row['id_turma']\n",
-    "    ]['discente'].count()\n",
+    "    filtro = matriculas_imd[\n",
+    "        matriculas_imd['id_turma'] == row['id_turma']\n",
+    "    ]\n",
+    "    \n",
+    "    turmas_fmc_ii.loc[index, 'aprovacao'] = (filtro[\n",
+    "        filtro['descricao'].isin(['APROVADO', 'APROVADO POR NOTA'])\n",
+    "    ]['discente'].count() * 100 / \n",
+    "        filtro['discente'].count()\n",
+    "    )\n",
     "\n",
+    "# turmas_fmc_ii.groupby('nome').head()\n",
     "turmas_fmc_ii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nome\n",
+       "ATHANASIOS TSOUANAS                13.298109\n",
+       "LOURENA KARIN DE MEDEIROS ROCHA    43.396226\n",
+       "REGIVAN HUGO NUNES SANTIAGO        36.752558\n",
+       "UMBERTO RIVIECCIO                  25.384615\n",
+       "Name: aprovacao, dtype: float64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "turmas_fmc_ii['aprovacao'] = turmas_fmc_ii['aprovacao'].astype(float)\n",
+    "turmas_fmc_ii.groupby('nome')['aprovacao'].mean()"
    ]
   },
   {
